# nns-cli

./: Cargo.toml  README.md  build.rs  input.txt
.github/workflows/: build.yml  checks.yml
scripts/: get-candid-definitions.sh
src/: cli.rs  commands.rs  common.rs  main.rs  types.rs  utils.rs
src/commands/: neuron.rs
src/commands/neuron/: list.rs
src/common/: agent.rs
src/common/canisters/: governance.rs
src/utils/: waiter.rs
