[package]
name = "nns-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.16"
clap = { version = "3.2.20", features = ["derive"] }
csv = "1.1.6"
garcon = "0.2.3"
ic-agent = "0.20.0"
ic-utils = "0.20.0"
serde = "1.0.144"
serde_json = "1.0.85"
shellexpand = "2.1.2"
tokio = { version = "1.17.0", features = ["fs"] }

[build-dependencies]
candid = "0.7.16"
pretty = "0.10.0"
